[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv-kzen = { version = "0.8", default-features = false }

[dependencies.bulletproof]
git = "https://github.com/tmpfs/bulletproofs"
branch = "curv-0.8"
#tag = "v1.1.6"
default-features = false

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
